GNOME Bugzilla – Bug 703606
GtkPlacesSidebar should use g_themed_icon_new_with_default_fallbacks()
Last modified: 2013-09-12 23:47:24 UTC
Created attachment 248371 [details] how it looks here Steps to reproduce: * Create a new mail * Add an attachment Actual result: the file picker is displayed with an empty list of places on the left Expected result: the file picker displayed with the usual places on the left
confirming on 3.9.3
Works fine for me with Evolution 3.9.3 and an older GTK+. Evolution has no control over the Places side bar anyway; the file chooser dialog is a stock GTK+ widget. There's been a lot of GTK+ regressions as of late. Try downgrading your GTK+ to a stable version. Let me know how it goes.
confirming, it works fine with evolution 3.9.3 + gtk 3.6.4 but break with gtk 3.9.0 or 3.9.3.
I'm already bisecting gtk3 for another regression; I'll try and hit this too.
I think I see what's going on. The new GtkPlacesSidebar is using symbolic icon names, but it's creating GIcons with g_themed_icon_new() instead of g_themed_icon_new_with_default_fallbacks(), which would fall back to the colorful icons if symbolic icons aren't available. I bet you could reproduce this with gtk3-demo via the "Pickers" test. Reassigning.
(In reply to comment #5) > I bet you could reproduce this with gtk3-demo via the "Pickers" test. Just tested and it works fine with gtk3-demo from gtk+ 3.9.3 ..
reopening, the bug is back in evolution (3.9.90), but not in gtk3-demo, with gtk+ 3.9.12
nothing to do with GtkPlacesSidebar at this point, we are using fallbacks there.
*** Bug 707895 has been marked as a duplicate of this bug. ***